# weaviate-recommend-python-client

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: 1_connection.md  2+_CRUD.md  2_add_items.md  2_create_schema.md  3_add_items.md  3_add_items_and_interactions.md  3_train.md  4_train.md  5_recommend.md  6_personalized_search.md  7_configured_endpoints.md  readme.md
test/: test_imports.py
weaviate_recommend/: __init__.py  client.py  exceptions.py  utils.py
weaviate_recommend/models/: configured.py  data.py  filter.py  responses.py  train.py
weaviate_recommend/services/: __init__.py  configured_endpoints.py  personalised_search.py  recommender_management.py  trainer.py
weaviate_recommend/services/data/: item.py  user.py
weaviate_recommend/services/recommendations/: base.py  item.py
